--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
-body {
-    border: 1px black dashed;
-    width: 512px;
-}
-body {
-    margin: 0;
-    padding: 0;
-    background: white;
+*{margin: 0;
+padding: 0;
+box-sizing: border-box;
 }
 
 header {
